Project 3 second submission

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button class="profile__edit-btn">
+            <button class="profile__edit-btn" type="button">
               <img
                 src="./images/pencil_icon.svg"
                 alt="Pencil icon"
@@ -34,7 +34,7 @@
               <span class="profile__edit-btn-text">Edit Profile</span>
             </button>
           </div>
-          <button class="profile__add-btn">
+          <button class="profile__add-btn" type="button">
             <img
               src="./images/plus_icon.svg"
               alt="Plus icon"
@@ -117,9 +117,8 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__content">
         <p class="footer__copyright">2023 &copy; Spots</p>
+      </footer>
     </div>
-    </footer>
   </body>
 </html>
