--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <header class="header">
         <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
       </header>
+
       <main class="content">
         <section class="profile page__section">
           <img
@@ -43,6 +44,7 @@
             <span class="profile__add-btn-text">New Post</span>
           </button>
         </section>
+
         <section class="cards page__section">
           <ul class="cards__list">
             <li class="card">
@@ -81,7 +83,7 @@
             <li class="card">
               <img
                 src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-                alt=" Long bridge over a forest"
+                alt="Long bridge over a forest"
                 class="card__image"
               />
               <div class="card__content">
@@ -119,6 +121,78 @@
       <footer class="footer">
         <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
+      <div class="modal"></div>
+      <div class="modal modal_is-opened">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn">
+            <img
+              src="./images/Close Icon.svg"
+              alt="Close"
+              class="modal__close-icon"
+            />
+          </button>
+          <h3 class="modal__title">Edit profile</h3>
+          <form class="modal__form">
+            <label for="profile-name-input" class="modal__label">
+              Name
+              <input
+                id="profile-name-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your Name"
+                required
+              />
+            </label>
+            <label for="profile-description-input" class="modal__label">
+              Description
+              <input
+                id="profile-description-input"
+                type="text"
+                class="modal__input"
+                placeholder="Describe yourself"
+                required
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
+      <div class="modal"></div>
+      <div class="modal modal_is-opened">
+        <div class="modal__container">
+          <button type="button" class="modal__close-btn">
+            <img
+              src="./images/Close Icon.svg"
+              alt="Close"
+              class="modal__close-icon"
+            />
+          </button>
+          <h3 class="modal__title">New Post</h3>
+          <form class="modal__form" name="new-post">
+            <label for="post-image-input" class="modal__label">
+              Image Link
+              <input
+                id="post-image-input"
+                type="url"
+                class="modal__input"
+                placeholder="Paste a link to the picture"
+                required
+              />
+            </label>
+            <label for="post-caption-input" class="modal__label">
+              Caption
+              <input
+                id="post-caption-input"
+                type="text"
+                class="modal__input"
+                placeholder="Type your caption"
+                required
+              />
+            </label>
+            <button type="submit" class="modal__submit-btn">Save</button>
+          </form>
+        </div>
+      </div>
     </div>
   </body>
 </html>
