Project 4 Stage 1 second commit

--- a/index.html
+++ b/index.html
@@ -118,10 +118,11 @@
           </ul>
         </section>
       </main>
+
       <footer class="footer">
         <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
-      <div class="modal"></div>
+
       <div class="modal modal_is-opened">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
@@ -157,8 +158,8 @@
           </form>
         </div>
       </div>
-      <div class="modal"></div>
-      <div class="modal modal_is-opened">
+
+      <div class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img
