Project 4 Stage 1 third commit

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img
-              src="./images/Close Icon.svg"
+              src="./images/close-icon.svg"
               alt="Close"
               class="modal__close-icon"
             />
@@ -163,7 +163,7 @@
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img
-              src="./images/Close Icon.svg"
+              src="./images/close-icon.svg"
               alt="Close"
               class="modal__close-icon"
             />
