--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 alt="Pencil icon"
                 class="profile__edit-btn-icon"
               />
-              <span class="profile__edit-btn-text">Edit Profile</span>
+              <span class="profile__edit-btn-text"> Edit Profile </span>
             </button>
           </div>
           <button class="profile__add-btn" type="button">
@@ -41,7 +41,7 @@
               alt="Plus icon"
               class="profile__add-btn-icon"
             />
-            <span class="profile__add-btn-text">New Post</span>
+            <span class="profile__add-btn-text"> New Post </span>
           </button>
         </section>
 
@@ -123,7 +123,7 @@
         <p class="footer__copyright">2023 &copy; Spots</p>
       </footer>
 
-      <div class="modal modal_is-opened">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img
@@ -159,7 +159,7 @@
         </div>
       </div>
 
-      <div class="modal">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img
@@ -195,5 +195,7 @@
         </div>
       </div>
     </div>
+
+    <script src="scripts/index.js"></script>
   </body>
 </html>
