Project 4 Final Stage 2nd commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="???" />
     <meta name="author" content="Samantha M. Fernandez" />
-    <meta name="keywords" content="HTML, CSS, ???" />
+    <meta name="keywords" content="
+    <meta
+      name="description"
+      content="Spots is a platform to share and relive your favorite travel destinations and memories"
+    />
     <title>Spots</title>
     <link rel="stylesheet" href="./pages/index.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
@@ -13,7 +17,11 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo.svg" alt="Spot logo" class="header__logo" />
+        <img
+          src="./images/logo.svg"
+          alt="Spots website logo"
+          class="header__logo"
+        />
       </header>
 
       <main class="content">
@@ -87,9 +95,7 @@
                 class="card__image"
               />
               <div class="card__content">
-                <h2 class="card__title">
-                  A very long bridge, over the forest...
-                </h2>
+                <h2 class="card__title">A very long bridge, over the forest</h2>
                 <button type="button" class="card__like-btn"></button>
               </div>
             </li>
