--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="???" />
-    <meta name="author" content="Samantha M. Fernandez" />
-    <meta name="keywords" content="
     <meta
       name="description"
       content="Spots is a platform to share and relive your favorite travel destinations and memories"
+    />
+    <meta name="author" content="Samantha M. Fernandez" />
+    <meta
+      name="keywords"
+      content="travel, destinations, spots, memories, photos, sharing"
     />
     <title>Spots</title>
     <link rel="stylesheet" href="./pages/index.css" />
@@ -23,7 +25,6 @@
           class="header__logo"
         />
       </header>
-
       <main class="content">
         <section class="profile page__section">
           <img
@@ -40,7 +41,7 @@
                 alt="Pencil icon"
                 class="profile__edit-btn-icon"
               />
-              <span class="profile__edit-btn-text"> Edit Profile </span>
+              <span class="profile__edit-btn-text">Edit Profile</span>
             </button>
           </div>
           <button class="profile__add-btn" type="button">
@@ -49,10 +50,9 @@
               alt="Plus icon"
               class="profile__add-btn-icon"
             />
-            <span class="profile__add-btn-text"> New Post </span>
+            <span class="profile__add-btn-text">New Post</span>
           </button>
         </section>
-
         <section class="cards page__section">
           <ul class="cards__list">
             <li class="card">
@@ -124,11 +124,9 @@
           </ul>
         </section>
       </main>
-
       <footer class="footer">
-        <p class="footer__copyright">2023 &copy; Spots</p>
+        <p class="footer__copyright">2023 © Spots</p>
       </footer>
-
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
@@ -164,7 +162,6 @@
           </form>
         </div>
       </div>
-
       <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
@@ -201,7 +198,6 @@
         </div>
       </div>
     </div>
-
     <script src="scripts/index.js"></script>
   </body>
 </html>
